* Makefile.am (AM_CFLAGS): Add '-Wall'. * Makefile.in: Update.

--- a/rda/unix/Makefile.in
+++ b/rda/unix/Makefile.in
@@ -95,6 +95,8 @@ install_sh = @install_sh@
 
 AUTOMAKE_OPTIONS = foreign
 
+AM_CFLAGS = -Wall
+
 noinst_PROGRAMS = rda
 
 INCLUDES = -I$(srcdir) -I$(srcdir)/../include 
