Separate management of kernel-level LWPs from that of libpthread / libthread_db-level threads. * lwp-pool.c, lwp-pool.h: New files. * thread-db.c: #include "lwp-ctrl.h" and "lwp-pool.h". (struct gdbserv_thread): Delete members 'attached', 'stopped', 'waited', and 'stepping'.  This structure is now just a 'td_thrinfo_t' and a list link.  Describe some quirks in the meanings of certain 'ti' fields. (thread_list_lookup_by_lid): Move later in file, so we can use information directly from our proc handle.  Be skeptical of ZOMBIE or UNKNOWN threads whose LWP ID is equal to the PID in the proc handle. (thread_debug_name): Move later in file, so we can use thread_db_state_str. (attach_thread): Use lwp pool functions to attach.  Attach to zombies.  When using signal-based communication, send the thread the restart signal immediately. (find_new_threads_callback): Go ahead and attach to all threads. The LWP pool functions tolerate attaching to a given LWP more than once. (update_thread_list): Take the process as an argument.  If the focus thread has disappeared, set process->focus_thread to NULL. (thread_db_thread_next): Pass the process to update_thread_list. (stop_thread, stop_all_threads, add_pending_event, delete_pending_event, select_pending_event, send_pending_signals, wait_all_threads, continue_all_threads): Deleted. (handle_thread_db_event): Renamed from handle_thread_db_events. Take the process structure as an argument, and check only for a thread-db event notification from process->event_thread.  Use LWP pool functions. (continue_thread, singlestep_thread): Use LWP pool functions. (thread_db_continue_program, thread_db_singlestep_program, thread_db_continue_thread, thread_db_singlestep_thread): Use LWP pool functions, and update process->focus_thread appropriately. (thread_db_check_child_state): Use the LWP pool functions.  Rather than stopping all LWP's, choosing the most interesting events, and then arranging to re-create all the other wait statuses we got, just pi

--- a/rda/unix/configure.in
+++ b/rda/unix/configure.in
@@ -28,7 +28,7 @@ AC_CHECK_HEADERS(errno.h ptrace.h signal.h string.h strings.h sys/procfs.h \
 
 case "$target" in
   mips64*linux*)
-    TARGET_MODULES="linux-target.o thread-db.o ptrace-target.o" 
+    TARGET_MODULES="linux-target.o thread-db.o lwp-pool.o ptrace-target.o" 
     AC_DEFINE(LINUX_TARGET)
     AC_DEFINE(GREGSET_T,  prgregset_t)
     AC_DEFINE(FPREGSET_T, prfpregset_t)
@@ -42,7 +42,7 @@ case "$target" in
   arm*linux* | \
   mips*linux* | \
   frv*linux*)
-    TARGET_MODULES="linux-target.o thread-db.o ptrace-target.o" 
+    TARGET_MODULES="linux-target.o thread-db.o lwp-pool.o ptrace-target.o" 
     AC_DEFINE(LINUX_TARGET)
     AC_DEFINE(GREGSET_T,  prgregset_t)
     AC_DEFINE(FPREGSET_T, prfpregset_t)
