* linux-target.c (stock_table_to_frv, frv_table_to_stock, stock_bp_to_frv, frv_bp_to_stock, frv_make_bp_table, frv_set_bp, frv_delete_bp, frv_bp_hit_p): New functions. (frv_make_arch): Register the latter four as our breakpoint methods. (MAKE_ARCH): New #definition. * configure.in: Use stock-breakpoints.o on FRV Linux, too. * configure: Regenerated.

--- a/rda/unix/configure.in
+++ b/rda/unix/configure.in
@@ -72,7 +72,7 @@ esac
 
 # Some architectures use the stock breakpoint model.
 case "$target" in
-  i?86*linux*)
+  i?86*linux* | frv*linux*)
     TARGET_MODULES="$TARGET_MODULES stock-breakpoints.o"
     AC_DEFINE(STOCK_BREAKPOINTS)
   ;;
