--- a/readline/config.h.in
+++ b/readline/config.h.in
@@ -1,29 +1,17 @@
 /* config.h.in.  Maintained by hand. */
 
-/* Define NO_MULTIBYTE_SUPPORT to not compile in support for multibyte
-   characters, even if the OS supports them. */
-#undef NO_MULTIBYTE_SUPPORT
-
-#undef _FILE_OFFSET_BITS
-
 /* Define if on MINIX.  */
 #undef _MINIX
 
 /* Define as the return type of signal handlers (int or void).  */
 #undef RETSIGTYPE
 
-#undef VOID_SIGHANDLER
-
 /* Characteristics of the compiler. */
-#undef sig_atomic_t
+#undef const
 
 #undef size_t
 
 #undef ssize_t
-
-#undef const
-
-#undef volatile
 
 #undef PROTOTYPES
 
@@ -32,41 +20,19 @@
 /* Define if the `S_IS*' macros in <sys/stat.h> do not work properly.  */
 #undef STAT_MACROS_BROKEN
 
+#undef VOID_SIGHANDLER
+
 /* Define if you have the fcntl function. */
-#undef HAVE_FCNTL
-
-/* Define if you have the getpwent function. */
-#undef HAVE_GETPWENT
-
-/* Define if you have the getpwnam function. */
-#undef HAVE_GETPWNAM
-
-/* Define if you have the getpwuid function. */
-#undef HAVE_GETPWUID
-
+#undef HAVE_FCNTL 
+ 
 /* Define if you have the isascii function. */
 #undef HAVE_ISASCII
-
-/* Define if you have the iswctype function.  */
-#undef HAVE_ISWCTYPE
-
-/* Define if you have the iswlower function.  */
-#undef HAVE_ISWLOWER
-
-/* Define if you have the iswupper function.  */
-#undef HAVE_ISWUPPER
 
 /* Define if you have the isxdigit function. */
 #undef HAVE_ISXDIGIT
 
-/* Define if you have the kill function. */
-#undef HAVE_KILL
-
 /* Define if you have the lstat function. */
 #undef HAVE_LSTAT
-
-/* Define if you have the mbrlen function. */
-#undef HAVE_MBRLEN
 
 /* Define if you have the mbrtowc function. */
 #undef HAVE_MBRTOWC
@@ -79,6 +45,15 @@
 
 /* Define if you have the putenv function.  */
 #undef HAVE_PUTENV
+
+/* Define if you have the getpwent function.  */
+#undef HAVE_GETPWENT
+
+/* Define if you have the getpwnam function.  */
+#undef HAVE_GETPWNAM
+
+/* Define if you have the getpwnam function.  */
+#undef HAVE_GETPWUID
 
 /* Define if you have the select function.  */
 #undef HAVE_SELECT
@@ -103,34 +78,14 @@
 /* Define if you have the tcgetattr function.  */
 #undef HAVE_TCGETATTR
 
-/* Define if you have the towlower function.  */
-#undef HAVE_TOWLOWER
-
-/* Define if you have the towupper function.  */
-#undef HAVE_TOWUPPER
-
 /* Define if you have the vsnprintf function.  */
 #undef HAVE_VSNPRINTF
-
-/* Define if you have the wcrtomb function.  */
-#undef HAVE_WCRTOMB 
-
-/* Define if you have the wcscoll function.  */
-#undef HAVE_WCSCOLL
-
-/* Define if you have the wctype function.  */
-#undef HAVE_WCTYPE
 
 /* Define if you have the wcwidth function.  */
 #undef HAVE_WCWIDTH
 
-#undef STDC_HEADERS
-
 /* Define if you have the <dirent.h> header file.  */
 #undef HAVE_DIRENT_H
-
-/* Define if you have the <fcntl.h> header file.  */
-#undef HAVE_FCNTL_H
 
 /* Define if you have the <langinfo.h> header file.  */
 #undef HAVE_LANGINFO_H
@@ -201,19 +156,10 @@
 /* Define if you have the <wchar.h> header file.  */
 #undef HAVE_WCHAR_H
 
-/* Define if you have the <wctype.h> header file.  */
+/* Define if you have the <varargs.h> header file.  */
 #undef HAVE_WCTYPE_H
 
 #undef HAVE_MBSTATE_T
-
-/* Define if you have wchar_t in <wctype.h>. */
-#undef HAVE_WCHAR_T 
-
-/* Define if you have wctype_t in <wctype.h>. */
-#undef HAVE_WCTYPE_T
-
-/* Define if you have wint_t in <wctype.h>. */  
-#undef HAVE_WINT_T  
 
 /* Define if you have <langinfo.h> and nl_langinfo(CODESET). */
 #undef HAVE_LANGINFO_CODESET
@@ -249,14 +195,16 @@
 
 #undef HAVE_POSIX_SIGSETJMP
 
-#undef CTYPE_NON_ASCII
-
 /* modify settings or make new ones based on what autoconf tells us. */
 
 /* Ultrix botches type-ahead when switching from canonical to
    non-canonical mode, at least through version 4.3 */
 #if !defined (HAVE_TERMIOS_H) || !defined (HAVE_TCGETATTR) || defined (ultrix)
 #  define TERMIOS_MISSING
+#endif
+
+#if defined (STRCOLL_BROKEN)
+#  undef HAVE_STRCOLL
 #endif
 
 #if defined (__STDC__) && defined (HAVE_STDARG_H)
