--- a/readline/configure.in
+++ b/readline/configure.in
@@ -4,102 +4,37 @@ dnl
 dnl report bugs to chet@po.cwru.edu
 dnl
 dnl Process this file with autoconf to produce a configure script.
+AC_REVISION([for Readline 4.3, version 2.45, from autoconf version] AC_ACVERSION)
 
-# Copyright (C) 1987-2009 Free Software Foundation, Inc.
-
-#   This program is free software: you can redistribute it and/or modify
-#   it under the terms of the GNU General Public License as published by
-#   the Free Software Foundation, either version 3 of the License, or
-#   (at your option) any later version.
-
-#   This program is distributed in the hope that it will be useful,
-#   but WITHOUT ANY WARRANTY; without even the implied warranty of
-#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#   GNU General Public License for more details.
-
-#   You should have received a copy of the GNU General Public License
-#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-AC_REVISION([for Readline 6.2, version 2.67])
-
-m4_include([../config/override.m4])
-
-AC_INIT(readline, 6.2, bug-readline@gnu.org)
+AC_INIT(readline, 4.3, bug-readline@gnu.org)
 
 dnl make sure we are using a recent autoconf version
 AC_PREREQ(2.50)
 
 AC_CONFIG_SRCDIR(readline.h)
-dnl GDB LOCAL
 dnl AC_CONFIG_AUX_DIR(./support)
-AC_CONFIG_AUX_DIR(`cd $srcdir;pwd`/..)
 AC_CONFIG_HEADERS(config.h)
 
 dnl update the value of RL_READLINE_VERSION in readline.h when this changes
-LIBVERSION=6.2
+LIBVERSION=4.3
 
 AC_CANONICAL_HOST
 
 dnl configure defaults
 opt_curses=no
-opt_purify=no
 
 dnl arguments to configure
 AC_ARG_WITH(curses, AC_HELP_STRING([--with-curses], [use the curses library instead of the termcap library]), opt_curses=$withval)
-AC_ARG_WITH(purify, AC_HELP_STRING([--with-purify], [configure to postprocess with purify]), opt_purify=$withval)
 
 if test "$opt_curses" = "yes"; then
 	prefer_curses=yes
 fi
 
-if test "$opt_purify" = yes; then
-	PURIFY="purify"
-else
-	PURIFY=
-fi
-
 dnl option parsing for optional features
-opt_multibyte=yes
 opt_static_libs=yes
 opt_shared_libs=no
 
-AC_ARG_ENABLE(multibyte, AC_HELP_STRING([--enable-multibyte], [enable multibyte characters if OS supports them]), opt_multibyte=$enableval)
-dnl AC_ARG_ENABLE(shared, AC_HELP_STRING([--enable-shared], [build shared libraries [[default=YES]]]), opt_shared_libs=$enableval)
 AC_ARG_ENABLE(static, AC_HELP_STRING([--enable-static], [build static libraries [[default=YES]]]), opt_static_libs=$enableval)
-
-if test $opt_multibyte = no; then
-AC_DEFINE(NO_MULTIBYTE_SUPPORT)
-fi
-
-dnl load up the cross-building cache file -- add more cases and cache
-dnl files as necessary
-
-dnl Note that host and target machine are the same, and different than the
-dnl build machine.
-
-CROSS_COMPILE=
-if test "x$cross_compiling" = "xyes"; then
-    case "${host}" in
-    *-cygwin*)
-        cross_cache=${srcdir}/cross-build/cygwin.cache
-        ;;
-    *-mingw*)
-        cross_cache=${srcdir}/cross-build/mingw.cache
-        ;;
-    i[[3456]]86-*-beos*)
-        cross_cache=${srcdir}/cross-build/x86-beos.cache
-        ;;
-    *)  echo "configure: cross-compiling for $host is not supported" >&2
-        ;;
-    esac
-    if test -n "${cross_cache}" && test -r "${cross_cache}"; then
-        echo "loading cross-build cache file ${cross_cache}"
-        . ${cross_cache}
-    fi
-    unset cross_cache
-    CROSS_COMPILE='-DCROSS_COMPILING'
-    AC_SUBST(CROSS_COMPILE)
-fi
 
 echo ""
 echo "Beginning configuration for readline-$LIBVERSION for ${host_cpu}-${host_vendor}-${host_os}"
@@ -112,6 +47,50 @@ AC_PROG_MAKE_SET
 AC_PROG_CC
 dnl AC_AIX
 AC_MINIX
+
+dnl BEGIN changes for CYGNUS cross-building for Cygwin
+ 
+dnl load up the cross-building cache file -- add more cases and cache
+dnl files as necessary
+if test "x$cross_compiling" = "xyes"; then
+    case "${host}" in
+    *-cygwin*)
+	cross_cache=${srcdir}/cross-build/cygwin.cache
+	LOCAL_CFLAGS="$LOCAL_CFLAGS -I${srcdir}/../libtermcap"
+	;;
+   *-mingw32*)	
+	cross_cache=${srcdir}/cross-build/mingw.cache
+        ;;
+    *)  echo "configure: cross-compiling for a non-cygwin target is not supported" >&2
+	;;
+    esac
+
+    if test "x$cross_cache" != "x"; then
+	if test -r "${cross_cache}"; then
+	    echo "loading cross-build cache file ${cross_cache}"
+	    . ${cross_cache}
+	fi
+	unset cross_cache
+    fi
+fi
+ 
+if test "x$cross_compiling" = "xyes"; then
+  CROSS_COMPILING_FLAG=-DCROSS_COMPILING
+else
+  CROSS_COMPILING_FLAG=
+fi
+AC_SUBST(CROSS_COMPILING_FLAG)
+ 
+if test -z "$CC_FOR_BUILD"; then
+    if test "x$cross_compiling" = "xno"; then
+        CC_FOR_BUILD='$(CC)'
+    else
+        CC_FOR_BUILD=gcc
+    fi
+fi
+AC_SUBST(CC_FOR_BUILD)
+ 
+dnl END changes for CYGNUS cross-building for Cygwin
 
 # If we're using gcc and the user hasn't specified CFLAGS, add -O to CFLAGS.
 test -n "$GCC" && test -n "$auto_cflags" && CFLAGS="$CFLAGS -O"
@@ -130,38 +109,25 @@ AC_SUBST(MAKE_SHELL)
 AC_C_CONST
 AC_C_PROTOTYPES
 AC_C_CHAR_UNSIGNED
-AC_C_VOLATILE
 
 AC_TYPE_SIGNAL
 
 AC_TYPE_SIZE_T
 AC_CHECK_TYPE(ssize_t, int)
 
-AC_HEADER_STDC
-
 AC_HEADER_STAT
 AC_HEADER_DIRENT
 
-AC_CHECK_FUNCS(fcntl kill lstat)
-AC_CHECK_FUNCS(memmove putenv select setenv setlocale \
-		strcasecmp strpbrk tcgetattr vsnprintf)
-AC_CHECK_FUNCS(isascii isxdigit)
-AC_CHECK_FUNCS(getpwent getpwnam getpwuid)
+AC_CHECK_FUNCS(fcntl lstat memmove putenv select setenv setlocale \
+	       strcasecmp strpbrk tcgetattr vsnprintf isascii isxdigit \
+               getpwname getpwent getpwuid)
 
 AC_FUNC_STRCOLL
 
-AC_CHECK_HEADERS(fcntl.h unistd.h stdlib.h varargs.h stdarg.h string.h strings.h \
-		limits.h locale.h pwd.h memory.h termcap.h termios.h termio.h)
-AC_CHECK_HEADERS(sys/pte.h sys/stream.h sys/select.h sys/file.h)
-
-AC_CHECK_HEADERS(sys/ptem.h,,,
-[[
-#if HAVE_SYS_STREAM_H
-#  include <sys/stream.h>
-#endif
-]])
-
-AC_SYS_LARGEFILE
+AC_CHECK_HEADERS(unistd.h stdlib.h varargs.h stdarg.h string.h strings.h \
+		limits.h sys/ptem.h sys/pte.h sys/stream.h sys/select.h \
+		termcap.h termios.h termio.h sys/file.h locale.h memory.h \
+                pwd.h)
 
 BASH_SYS_SIGNAL_VINTAGE
 BASH_SYS_REINSTALL_SIGHANDLERS
@@ -169,15 +135,12 @@ BASH_SYS_REINSTALL_SIGHANDLERS
 BASH_FUNC_POSIX_SETJMP
 BASH_FUNC_LSTAT
 BASH_FUNC_STRCOLL
-BASH_FUNC_CTYPE_NONASCII
 
 BASH_CHECK_GETPW_FUNCS
 
 AC_HEADER_TIOCGWINSZ
 
-BASH_TYPE_SIG_ATOMIC_T
 BASH_TYPE_SIGHANDLER
-
 BASH_HAVE_TIOCSTAT
 BASH_HAVE_FIONREAD
 BASH_CHECK_SPEED_T
@@ -216,13 +179,7 @@ esac
 #
 if test -f ${srcdir}/support/shobj-conf; then
         AC_MSG_CHECKING(configuration for building shared libraries)
-        eval `TERMCAP_LIB=$TERMCAP_LIB ${CONFIG_SHELL-/bin/sh} ${srcdir}/support/shobj-conf -C "${CC}" -c ${host_cpu} -o ${host_os} -v ${host_vendor}`
-
-#	case "$SHLIB_LIBS" in
-#	*curses*|*termcap*|*termlib*)	;;
-#	*)			SHLIB_LIBS="$SHLIB_LIBS $TERMCAP_LIB" ;;
-#	esac
-	
+        eval `${CONFIG_SHELL-/bin/sh} ${srcdir}/support/shobj-conf -C "${CC}" -c ${host_cpu} -o ${host_os} -v ${host_vendor}`
         AC_SUBST(SHOBJ_CC)
         AC_SUBST(SHOBJ_CFLAGS)
         AC_SUBST(SHOBJ_LD)
@@ -232,11 +189,8 @@ if test -f ${srcdir}/support/shobj-conf; then
         AC_SUBST(SHOBJ_STATUS)
 	AC_SUBST(SHLIB_STATUS)
 	AC_SUBST(SHLIB_XLDFLAGS)
-	AC_SUBST(SHLIB_DOT)
-	AC_SUBST(SHLIB_LIBPREF)
 	AC_SUBST(SHLIB_LIBSUFF)
 	AC_SUBST(SHLIB_LIBVERSION)
-	AC_SUBST(SHLIB_DLLVERSION)
 	AC_SUBST(SHLIB_LIBS)
         AC_MSG_RESULT($SHLIB_STATUS)
 
@@ -273,12 +227,6 @@ msdosdjgpp*)	BUILD_DIR=`pwd.exe` ;;	# to prevent //d/path/file
 *)		BUILD_DIR=`pwd` ;;
 esac
 
-case "$BUILD_DIR" in
-*\ *)	BUILD_DIR=`echo "$BUILD_DIR" | sed 's: :\\\\ :g'` ;;
-*)	;;
-esac
-
-AC_SUBST(PURIFY)
 AC_SUBST(BUILD_DIR)
 
 AC_SUBST(CFLAGS)
@@ -295,6 +243,12 @@ AC_SUBST(host_os)
 AC_SUBST(LIBVERSION)
 
 AC_SUBST(TERMCAP_LIB)
+
+case "$host_os" in
+mingw*)		RLTTYOBJ=rlnotty.o ;;
+*)		RLTTYOBJ=rltty.o ;;
+esac
+AC_SUBST(RLTTYOBJ)
 
 AC_OUTPUT([Makefile doc/Makefile examples/Makefile shlib/Makefile],
 [
